Finishes results and acknowledgements.

--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -135,7 +135,7 @@ In consideration of the above mentioned obstacles of a possible Linked Open Data
 
 \section{Benefits and challenges of using Linked Open Data at universities}
 \label{lod-benefits-challenges}
-As mentioned in the introduction, we identified \textit{students}, \textit{researchers} and \textit{administration employees} as import stakeholders at a university. This chapter describes the methodology and results of the conducted case study, where \textit{students} and persons affiliated with \textit{student affairs} at the Vienna University of Technology were the case. The essential question of the case study was RQ2; what are the major benefits and challenges for students if certain university resources are published as Linked Open Data and which needful use cases can result out of this from the perspective of the students. RQ3 played a minor role in the case study, because \textit{students} are in general on the consuming side of information technology at a university. However, there are \textit{students} that are running information systems (e.g. wikis or internet forums), which collect a not insignificant amount of knowledge, which is why this research question was also of interest. The case study was conducted at the Vienna University of Technology, where teaching and research is focused on engineering and natural science.  It has several faculties including Computer Sciences and Electrical Engineering \& Information Technology, which is exactly why the exploration of the willingness of students to develop applications based on LOD was also a goal. \textbf{5} participants from student representatives, teaching \& administration personnel to ordinary students participated in the case study.
+As mentioned in the introduction, we identified \textit{students}, \textit{researchers} and \textit{administration employees} as import stakeholders at a university. This chapter describes the methodology and results of the conducted case study, where \textit{students} and persons affiliated with \textit{student affairs} at the Vienna University of Technology were the case. The essential question of the case study was RQ2; what are the major benefits and challenges for students if certain university resources are published as Linked Open Data and which needful use cases can result out of this from the perspective of the students. RQ3 played a minor role in the case study, because \textit{students} are in general on the consuming side of information technology at a university. However, there are \textit{students} that are operating information systems (e.g. wikis or internet forums), which collect a not insignificant amount of knowledge, which is why this research question was also of interest. The case study was conducted at the Vienna University of Technology, where teaching and research is focused on engineering and natural science.  It has several faculties including Computer Sciences and Electrical Engineering \& Information Technology, which is exactly why the exploration of the willingness of students to develop applications based on LOD was also a goal. \textbf{5} participants from student representatives, teaching \& administration personnel to ordinary students participated in the case study.
 
 A case study concerning \textit{researchers} was conducted by Lukas Baronyai $<link>$ and another one concerning \textit{administration employees} by Stefan Gamerith $<link>$. 
 
@@ -241,14 +241,28 @@ The Vienna University of Technology consists of eight faculties, which cover the
 When a student wants to get an overview of the suggested resources (books, journal articles, web pages and other forms of media) for attainig the learning goals of the course, the student may have to scan web pages and lecture slides for collecting them. Furthermore the student has to search for a supplier for each resource that is not freely accessible over the WWW, like most books and journals. Resource lists management tools try to simplify this procedure. \begin{quote}On the subject of the user experience for the student, RLM tools have often been no more than electronic replicas of the paper based list. There has traditionally been little attempt to allow students to annotate items with regard to their intended use, or interact with content. Students could not feedback whether they have found items useful in attaining their learning goals, or add personal study notes. There has been no facility to allow the students themselves to form new collections or bibliographies of resources for a particular essay or group exercise.\cite{clarke_resource_2009}\end{quote} Resource lists, that are simply exposed on web pages or in lecture slides, are not a very convenient approach from the students perspective. Resource lists management tools can take Linked Open Data principles into consideration and link the resources to the suppliers (and especially to the local academic library, if possible). The students can give feedback to a resource list of the lecturer and create their own resource lists, which can on their part be rated by other students. Students can also comment respectively mark helpful sections of resources.
 
 \paragraph{Results:}
-\textit{\textbf{B}} and \textit{\textbf{C}} were quite sceptical about this use case and their concerns are further discussed in the challenge section. \textit{\textbf{A}}, \textit{\textbf{D}} and \textit{\textbf{E}} would like to have such an application.\textit{\textbf{E}} said, ''\textit{Yes. It is a pain to stay up-to-date on organizational lecture information, which is often distributed over TISS\footnote{central information system of the Vienna University of Technology}, TUWEL\footnote{e-learning platform, customization of moodle}, the institutute homepage, etc.} ...''. This comment goes beyond this use case and concerns organizational information in general. Such a resource list management tool could be part of a broader set of services that simplify the organizational burden of students. \textit{\textbf{D}} mentioned that (s)he was multiple times on the edge to send explored useful resources that helped him/her a lot to attain the learning goals of the course per email to the lecturer. \textit{\textbf{D}} also suggested a ranking like on stackoverflow\footnote{\url{http://stackoverflow.com/}}, where contributions can be liked or disliked and in consequence helpful contributions are usually at the top. \textit{\textbf{E}} suggested to make it possible to link to useful contributions in the Informatikforum\footnote{internet forum for students of informatics} and experience reports on VOWI\footnote{a wiki, where students share experience and knowledge about courses}.
+\textit{\textbf{B}} and \textit{\textbf{C}} were quite sceptical about this use case and their concerns are further discussed in the challenge section. \textit{\textbf{A}}, \textit{\textbf{D}} and \textit{\textbf{E}} would like to have such an application.\textit{\textbf{E}} said, ''\textit{Yes. It is a pain to stay up-to-date on organizational lecture information, which is often distributed over TISS\footnote{central information system of the Vienna University of Technology}, TUWEL\footnote{e-learning platform, a customization of moodle}, the institutute homepage, etc.} ...''. This comment goes beyond this use case and concerns organizational information in general. Such a resource list management tool could be part of a broader set of services that simplify the organizational burden of students. \textit{\textbf{D}} mentioned that (s)he was multiple times on the edge to send explored useful resources that helped him/her a lot to attain the learning goals of the course per email to the lecturer. \textit{\textbf{D}} also suggested a ranking like on stackoverflow\footnote{\url{http://stackoverflow.com/}}, where contributions can be liked or disliked and in consequence helpful contributions are usually at the top. \textit{\textbf{E}} suggested to make it possible to link to useful contributions in the Informatikforum\footnote{internet forum for students of informatics} and experience reports on VOWI\footnote{a wiki, where students share experience and knowledge about courses}.
 
 \paragraph{Challenges:}
 \textit{\textbf{B}} and \textit{\textbf{C}} mentioned that the additional administrative burden for course teams like keeping the list up-to-date may diminish the willingness of using such an application.\textit{\textbf{B}} pointed out, that the use of the e-learning platform TUWEL is also not accepted throughout all course teams. While the contribution of the course team would be quite valuable, the resource list management tool could allow the students to create resource lists completely on their own. However, this approach may cause situations where solutions to exercises are contributed as well as spam, if the course team is not into it. Same as with the map application use case, the information required for such an application is separated over different data sources including diverging data owners. Challenges as well as an approach to overcome this is further discussed in \ref{technical-architecture-challenges}.
 
 \subsubsection{Explored use cases}
 \label{lod-benefits-challenges:explored-needs-usecases:explored}
-...
+One essential part of the interview was the exploration of the interviewee's ideas regarding needful use cases and datasets for which a more open access is requested. This section represents the results.
+
+\paragraph{Course calendar:} As mentioned earlier and also by some interviewees, the organizational information for courses may be separated over multiple sources. There is the central information system TISS, where basic information for mostly all courses is exposed. Especially for courses with exercises, also the e-learning platform TUWEL is often used simultaneously, where all the deadlines for the exercises are exposed and sometime more detailed information about the lecture times. And yet other courses have their own platform or own simple web pages, where more detailed organizational information is provided. In order to get an overview of all dates, a student has to collect this information manually, which is not a convenient approach. On the one hand this procedure is quite time-consuming and on the other hand prone to failures. For \textit{\textbf{D}} the calendar shall have following functions.
+
+\begin{description}
+ \item[Range of covered events:] The calendar shall not only contain the lecture times of favoured courses, but also other important events like dates of course/exercise-group/exam registrations or exercise deadlines.
+ \item[Semester planning:] The calendar shall be able to detect intersections of events (e.g. the lecture time of one course intersect with the lecture time of another) and give a precise warning. 
+ \item[Synchronization:] There shall be the ability to synchronize the course calendar with the own calendar.
+\end{description} 
+
+TISS already provides a calendar with the dates of all favoured courses, but the calendar is restricted to the lecture times exposed on TISS.
+
+\paragraph{Course information:} As mentioned above, the organizational information of courses may be separated over multiple sources. Firstly, there should be a possibility to present all available organizational information of a certain course to a student. Additionally, there are also internet forums and wikis operated from students that collect information (mostly experience) about certain courses. \textit{\textbf{D}} and \textit{\textbf{E}} wanted to have the ability to interlink the course information on TISS with other sources like VOWI (wiki operated from students). \textit{\textbf{D}} also would like to have the ability to filter courses by categories. For example, when a student is interested in artificial intelligence and (s)he want to get all courses of this field. 
+
+\paragraph{Event calendar:} Same as with course information, the information about events that are going to take place at the university are separated over different sources in dependence on which organizational unit organizes the event. \textit{\textbf{D}} would like to have a calendar for all events. It shall be possible to filter the events by categories/organizational units. This idea is similar to the event calendar of the University of Southampton\footnote{\url{http://www.events.soton.ac.uk/}}. At the moment of writing, the events are often announced to the students per email, flyers or by word-of-mouth recommendations including social networks. It is likely to oversee events in which you are potentially interested in. \textit{\textbf{D}} would also like to have an event calendar that can be synchronized with the own calendar using the mentioned filter.
 
 \subsection{Playground}
 \label{lod-benefits-challenges:playground}
@@ -401,24 +415,15 @@ The conclusion goes here.
 %  Acknowledgment
 % --------------------------------------------------------------------------------------------
  
-\section*{Acknowledgment}
-\label{acknowledgment}
-The authors would like to thank...
+\section{Acknowledgement}
+\label{acknowledgement}
+The author would like to thank Fachschaft Informatik, Faustmann Georg, Dominik Moser, Siebenhandl Hannes and Schumacher Barbara for taking part in the case study and for sharing your ideas and thoughts.
 
 % --------------------------------------------------------------------------------------------
 %  Appendices
 % --------------------------------------------------------------------------------------------
-
+\newpage
 \appendix
-
-% --------------------------------------------------------------------------------------------
-%  Appendices: Linked Open Data
-% --------------------------------------------------------------------------------------------
-
-\section{Linked Open Data}
-\label{linked-open-data-ap}
-
-... a short description of linked (open) data and the formats ... 
 
 % --------------------------------------------------------------------------------------------
 %  Appendices: Questionaire
