--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -295,7 +295,7 @@ The interviewees were also asked about their willingness to develop applications
 
 Student \textit{\textbf{D}} would be willed to develop applications based on provided Linked Open Data, only if some incentives like rewards for innovative applications were provided, but could imagine that some of his/her student colleagues may develop small applications for their own joy. Student \textit{\textbf{E}} would be willed to, if (s)he has a creative idea. 
 
-\textit{\textbf{B}} saw his/her personal interest in other areas, but could imagine that students of courses that lecture software engineering, where a practical project has to be carried out (e.g. Advanced Software Engineering at the Vienna University of Technology), may design an application based on Linked Open Data provided by the university. \textit{\textbf{C}} was principally interested in writing such an application.
+\textit{\textbf{B}} saw his/her personal interest in other areas, but could imagine that students of courses that lecture software engineering, where a practical project has to be carried out (mentioned course 'Advanced Software Engineering' at the Vienna University of Technology), may design an application based on Linked Open Data provided by the university. \textit{\textbf{C}} was principally interested in writing such an application.
 
 Overall, the interviewees were more or less cautious regarding this question.
 
@@ -308,7 +308,7 @@ Overall, the interviewees were more or less cautious regarding this question.
 \section{Technical architecture and challenges}
 \label{technical-architecture-challenges}
 
-Today's universities usually have to manage a significant amount of information and additional one is produced day by day. Due to the complexity of the domain of a university, there may be multiple services that handle a particular part of the domain. For a university that commits both to science and science education the domain includes areas like the management of an academic library or the provision of an education respectively research platform. Furthermore, larger universities tend to spread their services across several departments to serve their stakeholders and satisfy their specific requirements. This phenomena of spreading services can not only be observed at the Vienna University of Technology, but also at the Open University\footnote{\url{http://www.open.ac.uk/}} (Fouad Zablith, Mathieu d’Aquin, Stuart Brown and Liam Green-Hughes, 2011)\cite{zablith_consuming_2011}.
+Today's universities usually have to manage a significant amount of information and additional one is produced day by day. Due to the complexity of the domain of a university, there may be multiple services that handle a particular part of the domain. For a university that commits both to science and science education, the domain includes areas like the management of an academic library or the provision of an education respectively research platform. Furthermore, larger universities tend to spread their services across several departments to serve their stakeholders and satisfy their specific requirements. This phenomena of spreading services can not only be observed at the Vienna University of Technology, but also at the Open University\footnote{\url{http://www.open.ac.uk/}} (Fouad Zablith, Mathieu d’Aquin, Stuart Brown and Liam Green-Hughes, 2011)\cite{zablith_consuming_2011}.
 
 It is likely for such an environment to result in independent services, which encapsulate their collected information into disconnected data sources with different formats and/or data owners. As a result of this, the information that has been collected by all these multiple services can not easily be interlinked, which blocks the full potential. A simple example for such two isolated services at the Vienna University of Technology are the e-learning platform called TUWEL\footnote{\url{https://tuwel.tuwien.ac.at/}}, which is a customization of moodle\footnote{\url{https://moodle.org/}}, and the central information system called TISS. Both of these services provide course information and material, but they are intended for different purposes. TISS focuses mainly on administrative functionality like course or exam registrations, whereas TUWEL focuses on a broader interaction between teacher and student. Providing for example an additional functionality, which synchronizes important dates from deadlines of exercises to the time of lectures and exams with your own calendar might be quite useful, but the development is costly, due to the fact that the information is separated over this different isolated data sources and at that point not freely accessible. 
 
@@ -356,7 +356,7 @@ of the work like through university aid, donors or advertisements. This particul
 
 \begin{itemize}
 \item \textit{Application developer}~\\
-The application developer has the essential expertise for building software applications that meet the predefined specifications, which are influenced by the user requirements. Thereby the developer can also be a stakeholder. Computer science researchers can for example program solutions to simplify some work tasks for themselves or the whole research community at the university. 
+The application developer has the essential expertise for building software applications that meet the predefined specifications, which are influenced by the user requirements. The developer can also be a stakeholder. Computer science researchers can for example program solutions to simplify some work tasks for themselves or the whole research community at the university. 
 
 \item \textit{Linked Data expert}~\\
 An expert, who has expertise about Linked Data and the supporting frameworks of the used programming language, is inevitable, when developing an application based on Linked Data. Whereas the idea of Linked Data is around for while now, common application developers may not be familiar with this technology to an extent that they can develop a reliable application based on it. The level of the required expertise depends on how the exposed Linked Data shall be used. If the application uses the exposed Linked Data only for querying data, the level is low and an application developer can learn it with spending some extra time. If the application itself shall use the Linked Data approach to store data (e.g. triple store) and/or do more advanced operations on Linked Data like link it with other (linked) datasets, manipulate it or reason over it, a higher level is needed and it is not done by spending some extra time. In this case inviting an expert to the development team, is a better approach.
@@ -376,7 +376,7 @@ is the interaction of users with a developed application that makes use of LOD p
 \label{fig:tac-high-level-architecture}
 \end{figure}
 
-In order to overcome the environment of data silos and to support the evolvement of a university-wide data space for public resources, a technical architecture following Linked Data principles is proposed and discussed in this section. Students of a university are usually on the consuming side of information systems. However, there are students that are operating information systems like wikis and internet forums. Furthermore, some course teams have their own web pages, where detailed information about the course is provided. In earlier studies of Linked Data applied to the domain of universities little attention has been paid to this issue. The proposed technical architecture in contrast suggests a solution for this issue.
+In order to overcome the environment of data silos and to support the evolvement of a university-wide data space for public resources, a technical architecture following Linked Data principles is proposed and discussed in this section. Students of a university are usually on the consuming side of information systems. However, there are students that are operating information systems like wikis and internet forums. Furthermore, some course teams have their own web pages, where detailed information about the course is provided. In earlier studies of Linked Data applied to the domain of universities little attention has been paid to this issue. The proposed technical architecture in contrast suggests a solution.
 
 The technical architecture is composed of three tiers. The first tier represents the diverging forms of \textbf{\textit{data sources}} that can occur in an information environment at a university (see \ref{technical-architecture-challenges:proposal:data-source}). The second tier shows the \textbf{\textit{integration}} of such data sources into a central data storage for linked data also called triple store (see \ref{technical-architecture-challenges:proposal:integration}). The third tier shows the \textbf{\textit{provision}} of the stored linked data so that developers can implement application based on it (see \ref{technical-architecture-challenges:proposal:provision}). 
 
@@ -385,7 +385,7 @@ The technical architecture is composed of three tiers. The first tier represents
 
 \paragraph{Not machine-processable or -interpretable} sources of knowledge like the expertise of a human (e.g. which rooms are in which way accessible) or digital data that is hard to interpret (e.g. images, PDF files) have to be transformed by a human into data formats that can be processed and interpreted by computers in order to be managed by the proposed technical architecture.
 
-\paragraph{Semi structured sources} 
+\paragraph{Semi-structured files} 
 
 \subparagraph{Relational databases}
 
