Adapts the title page.

--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -16,15 +16,28 @@
 %   The title page of the article
 % ----------------------------------------------------------------------------------------------
 \pagenumbering{gobble}
-\title{Linked~Open~Data at the Vienna~University~of~Technology} 
-\author{Kevin Haller\\
-	\texttt{kevin.haller@student.tuwien.ac.at}} 
+\title{Linked~Open~Data\\
+	   at the\\
+	   Vienna~University~of~Technology\\
+	   \large A case study concerning students}
+
+\author{Kevin Haller$^a$, \textit{Author}\\
+		Lukas Baronyai$^b$, \textit{Co-Author}\\
+		Stefan Gamerith$^c$, \textit{Co-Author}\\
+	\texttt{\{kevin.haller$^a$,e1326526$^b$,e0925081$^c$\}@student.tuwien.ac.at}}
 \date{March 2016} 
 
 \maketitle
 
 \begin{abstract}
-The abstract goes here.
+The abstract goes here.\\
+ \\
+ \\
+ \\
+ \\
+ \\
+ \\
+ \\
 \end{abstract}
 
 \smallskip
