--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -153,17 +153,21 @@ LUCERO (Linking University Content for Education and Research Online) was a proj
 
 \subsection{Austrian Open Data}
 \label{related-work:austrian-open-data}
+In Austria data sets of various governmental units from different areas of life are exposed on the open data portal \texttt{data.gv.at}. Whereas this data portal is restricted to governmental units\footnote{Member of "Cooperation OGD Austria"}, \texttt{opendataportal.at} provides a platform for anyone who wants to share data in an open way. In both cases the category \textit{'Bildung und Forschung'} (German for education and research) is especially of interest for (Linked) Open Data initiatives at Austrian universities. Overall, the published data sets are mainly localizing points of interest (libraries, museums and universities), but apart of the Vienna University of Economics less further information like provided courses and curricula has been published yet about universities. In fact, the Vienna University of Economics is already active and publishes mainly course information and library collections in a machine-readable and open way on their open data portal \texttt{data.wu.ac.at} and on \texttt{opendataportal.at}.
 
+Wegweiser\footnote{\url{http://www.wegweiser.ac.at/}} is an earlier attempt of a set of Austrian universities to share information of public interest like course information, curricula and building plans. This web service is not only maintained any more and outdated, but the information is also not easily processable by computers so that applications based on it can evolve.
 
-\subsection{Linked Education}
+... continued ...
+
+Meanwhile data is exposed in machine-readable and open formats, there has been little effort taken to provide it as Linked Open Data. However, Christian Weiss has worked on the provision of a subset of the Open Government Data provided by Vienna (\texttt{data.wien.gv.at}) as Linked Open Data. Furthermore, LOD~Pilot\footnote{\url{http://lodpilot.at/}} project was initiated to transform the basic data sets of \texttt{data.gv.at} into Linked Open Data.
+
+\subsection{Open and Linked Education}
 \label{related-work:austrian-open-data}
-
+...
 
 \subsection{Earlier studies}
 \label{related-work:earlier-studies}
-%Since the idea of Linked Open Data as well as the idea of applying it to the domain of universities is around for a while now (e.g. Linked Universities, 2011), 
-
-
+...
 
 % --------------------------------------------------------------------------------------------
 %  Result: Case study
